--- a/package.json
+++ b/package.json
@@ -50,11 +50,15 @@
         "react-resizable-panels": "^2.0.17",
         "react-router-dom": "^6.26.2",
         "recharts": "^2.10.4",
+        "react-hook-form": "^7.53.0",
         "sonner": "^1.5.0",
         "tailwind-merge": "^2.5.2",
         "vaul": "^0.9.1"
     },
     "devDependencies": {
+        "@types/node": "^20.14.10",
+        "@types/react": "^18.3.5",
+        "@types/react-dom": "^18.3.0",
         "@types/react": "^18.3.5",
         "@types/react-dom": "^18.3.0",
         "@vitejs/plugin-react": "^4.3.1",
